--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <resources>
 
-    <color name="colorPrimary">@color/color_DeepOrange_500</color>
-    <color name="colorPrimaryDark">@color/color_DeepOrange_700</color>
-    <color name="colorAccent">@color/color_DeepOrange_100</color>
+    <color name="colorPrimary">@color/color_Red_500</color>
+    <color name="colorPrimaryDark">@color/color_Red_700</color>
+    <color name="colorAccent">@color/color_Red_100</color>
 
 
     <color name="textColorPrimary">#D9FFFFFF</color>
