--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:src="@drawable/header"
+    android:src="@drawable/redheader"
     android:adjustViewBounds="true"
     android:scaleType="fitCenter">
 </ImageView>
