--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,9 +1,13 @@
 <resources>
-
+    <!-- MaterialDrawerTheme.TranslucentStatus -->
     <style name="BaseAppTheme" parent="MaterialDrawerTheme.TranslucentStatus">
         <item name="android:windowAnimationStyle">@style/WindowAnimationTransition</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+
+
+
     </style>
 
 
