Add Holiday Fragment

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <resources>
 
+    <dimen name="RecyclerView_padding">8dp</dimen>
 
     <!-- fab sizes -->
     <dimen name="fab_small">40dp</dimen>
