--- a/app/src/main/res/layout/holiday_fragment.xml
+++ b/app/src/main/res/layout/holiday_fragment.xml
@@ -2,17 +2,15 @@
 xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin" >
+ >
 
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/my_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
+        android:padding="@dimen/RecyclerView_padding"
+        android:clipToPadding="false"
         android:scrollbars="vertical" />
 
     </RelativeLayout>
