--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <resources>
 
-    <color name="colorPrimary">@color/color_Red_500</color>
-    <color name="colorPrimaryDark">@color/color_Red_700</color>
-    <color name="colorAccent">#FFFFFFFF</color>
+    <color name="colorPrimary">@color/color_Green_500</color>
+    <color name="colorPrimaryDark">@color/color_Green_700</color>
+    <color name="colorAccent">@color/color_Green_100</color>
 
     <color name="textColorPrimary">#FFFFFFFF</color>
     <color name="navigationBarColor">#FF000000</color>
@@ -67,9 +67,14 @@
     <color name="color_DeepOrange_100">#FFCCBC</color>
 
 
-    <!-- Material Light_Blue Primary -->
+    <!-- Material Light_Blue -->
     <color name="color_light_blue_500">#0277bd</color>
-    <color name="color_light_blue_100">#b9e1f8</color>
     <color name="color_light_blue_700">#1687ca</color>
+    <color name="color_light_blue_100">#b9e1f8</color>
+
+    <!-- Material Ibrahim -->
+    <color name="color_Ibrahim_500">#a1455d</color>
+    <color name="color_Ibrahim_700">#81374a</color>
+    <color name="color_Ibrahim_100">#b9e1f8</color>
 
 </resources>
