Add floating action button

--- a/app/src/main/res/layout/row_cardview_holiday.xml
+++ b/app/src/main/res/layout/row_cardview_holiday.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:layout_margin="25dp"
     android:orientation="horizontal"
+    card_view:cardElevation="2sp"
     card_view:cardUseCompatPadding="true"
     card_view:contentPadding="@dimen/activity_horizontal_margin"
     card_view:cardCornerRadius="4dp"
