--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,4 +17,7 @@
 
     <!-- Toolbar Padding -->
     <dimen name="tool_bar_top_padding">0dp</dimen>
+
+    <dimen name="parallax_image_height">180dp</dimen>
+    <dimen name="toolbar_margin_start">72dp</dimen>
 </resources>
