--- a/app/src/main/res/layout/fragment_add_edit_holiday.xml
+++ b/app/src/main/res/layout/fragment_add_edit_holiday.xml
@@ -1,80 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical"
-    android:background="@android:color/white">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
+    <LinearLayout
 
-        <LinearLayout
-            android:id="@+id/flexible_space_main"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?colorPrimary"
-            android:orientation="vertical"
-            android:paddingBottom="16dp"
-            android:paddingLeft="72dp"
-            android:paddingRight="16dp"
-            android:paddingTop="16dp">
+        android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical"
+        android:background="@android:color/white">
 
-            <com.rengwuxian.materialedittext.MaterialEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Semester Name"
-                android:textCursorDrawable="@drawable/text_cursor"
-                android:textSize="34sp"
-                app:baseColor="@android:color/white"
-                app:floatingLabel="highlight"
-                app:maxCharacters="20"
-                app:primaryColor="?colorAccent"
-                app:singleLineEllipsis="true" />
-
-        </LinearLayout>
-        <include   layout="@layout/toolbar_shadow" />
-        <ScrollView
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scrollbarStyle="outsideOverlay"
-            >
             <LinearLayout
+                android:id="@+id/flexible_space_main"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="?colorPrimary"
                 android:orientation="vertical"
-
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin">
-
-
-
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:text="Phone"
-                    android:textColor="#333333"
-                    android:textSize="14sp" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="ss"
-                    android:textColor="#888888"
-                    android:textSize="14sp" />
+                android:paddingBottom="16dp"
+                android:paddingLeft="72dp"
+                android:paddingRight="16dp"
+                android:paddingTop="16dp">
 
                 <com.rengwuxian.materialedittext.MaterialEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Material Design Icon"
-                    app:iconLeft="@drawable/ic_phone"
-                    app:floatingLabel="highlight"
-                    app:helperText="Phone number "
-                    app:iconPadding="10dp"
-                    app:maxCharacters="5" />
+                    android:hint="@string/semester_name"
 
+                    android:textCursorDrawable="@drawable/text_cursor"
+                    android:textSize="34sp"
+                    app:baseColor="@android:color/white"
+                    app:floatingLabel="highlight"
+                    app:maxCharacters="20"
+                    app:primaryColor="?colorAccent"
+                    app:singleLineEllipsis="true" />
 
             </LinearLayout>
-         </ScrollView>
-</LinearLayout>
+            <include   layout="@layout/toolbar_shadow" />
+            <ScrollView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scrollbarStyle="outsideOverlay"
+                >
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+
+                    android:paddingBottom="@dimen/activity_vertical_margin"
+                    android:paddingLeft="@dimen/activity_horizontal_margin"
+                    android:paddingRight="@dimen/activity_horizontal_margin"
+                    android:paddingTop="@dimen/activity_vertical_margin">
+
+
+
+                    <com.rengwuxian.materialedittext.MaterialEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Start Date"
+                        app:iconLeft="@drawable/ic_phone"
+                        app:floatingLabel="highlight"
+                        app:helperText="Term / Semester expected Start Date"
+                        app:iconPadding="10dp"
+                        app:maxCharacters="5" />
+
+                    <com.rengwuxian.materialedittext.MaterialEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="End Date"
+                        app:iconLeft="@drawable/ic_phone"
+                        app:floatingLabel="highlight"
+                        app:helperText="Term / Semester expected End Date"
+                        app:iconPadding="10dp"
+                        app:maxCharacters="5" />
+
+                    <com.gc.materialdesign.views.ButtonRectangle
+                        android:id="@+id/button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="?colorPrimary"
+                        android:text="Button" />
+
+                    <Button
+                        android:id="@+id/setErrorWithMinLines2Bt"
+                        android:layout_width="48dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="8dp"
+                        android:textColor="@color/colorAccent"
+                        android:background="?colorPrimary"
+                        android:text="2" />
+
+                </LinearLayout>
+             </ScrollView>
+
+    </LinearLayout>
+
+
+
+
+</RelativeLayout>
