--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <resources>
 
-    <color name="colorPrimary">@color/color_Green_500</color>
-    <color name="colorPrimaryDark">@color/color_Green_700</color>
-    <color name="colorAccent">@color/color_Green_100</color>
+    <color name="colorPrimary">@color/color_Blue_500</color>
+    <color name="colorPrimaryDark">@color/color_Indigo_700</color>
+    <color name="colorAccent">#A7FFEB</color>
 
     <color name="textColorPrimary">#FFFFFFFF</color>
     <color name="navigationBarColor">#FF000000</color>
