--- a/app/src/main/res/layout/row_cardview_holiday.xml
+++ b/app/src/main/res/layout/row_cardview_holiday.xml
@@ -11,12 +11,13 @@
     card_view:cardCornerRadius="4dp"
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground"
-
+android:minHeight="100dp"
     >
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_centerInParent="true"
         android:background="?android:selectableItemBackground">
 
         <TextView
