--- a/app/src/main/res/layout/row_cardview_holiday.xml
+++ b/app/src/main/res/layout/row_cardview_holiday.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="25dp"
@@ -11,24 +13,81 @@
     card_view:cardCornerRadius="4dp"
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground"
-android:minHeight="100dp"
     >
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerInParent="true"
-        android:background="?android:selectableItemBackground">
+        android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/info_text"
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/titleTextView"
+            android:padding="16dp"
+            android:textColor="#3C3C3C"
+            android:textSize="28sp"
+            tools:text="This is the title"/>
 
-            android:layout_centerInParent="true"
-            android:gravity="center"
-            android:textColor="@android:color/black"
-            android:textSize="24sp" />
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/txtFromDate"
+            android:layout_below="@+id/titleTextView"
+            android:textColor="#878787"
+            android:padding="16dp"
+            android:textSize="16sp"
+            tools:text="And this is the description"/>
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/txtToDate"
+            android:layout_below="@+id/txtFromDate"
+            android:textColor="#878787"
+            android:padding="16dp"
+            android:textSize="16sp"
+            tools:text="And this is the description"/>
+
+        <View
+            android:id="@+id/cardDivider"
+            android:layout_width="fill_parent"
+            android:layout_height="1px"
+            android:background="#D4D4D4"
+            android:layout_below="@+id/txtToDate"
+            android:layout_alignLeft="@+id/titleTextView"
+            android:layout_alignStart="@+id/titleTextView"
+            />
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/butEdit"
+            android:layout_below="@+id/txtToDate"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:paddingLeft="16dp"
+            android:paddingTop="16dp"
+            android:paddingBottom="16dp"
+            android:paddingRight="8dp"
+            android:maxLines="1"
+            android:clickable="true"
+            tools:text="LEFT BUTTON"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnDelete"
+            android:paddingLeft="8dp"
+            android:paddingTop="16dp"
+            android:paddingRight="16dp"
+            android:paddingBottom="16dp"
+            android:layout_toRightOf="@+id/butEdit"
+            android:layout_alignTop="@+id/butEdit"
+            android:maxLines="1"
+            android:clickable="true"
+            tools:text="RIGHT BUTTON"/>
+
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
