--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,4 +20,7 @@
 
     <dimen name="parallax_image_height">180dp</dimen>
     <dimen name="toolbar_margin_start">72dp</dimen>
+
+    <!-- Tab -->
+    <dimen name="text_size_small">13sp</dimen>
 </resources>
