--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
+        android:elevation="5dp"
         android:paddingTop="@dimen/tool_bar_top_padding">
 
         <include   layout="@layout/toolbar" />
@@ -34,7 +35,7 @@
         </FrameLayout>
 
 
-        <include android:id="@+id/shadow_main_activity"  layout="@layout/toolbar_shadow" />
+        <!--<include android:id="@+id/shadow_main_activity"  layout="@layout/toolbar_shadow" />-->
 
     </FrameLayout>
 
