--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
         </FrameLayout>
 
 
-        <!--<include android:id="@+id/shadow_main_activity"  layout="@layout/toolbar_shadow" />-->
+        <include android:id="@+id/shadow_main_activity"  layout="@layout/toolbar_shadow" />
 
     </FrameLayout>
 
