--- a/app/src/main/res/layout/tab_indicator.xml
+++ b/app/src/main/res/layout/tab_indicator.xml
@@ -7,7 +7,7 @@
     android:paddingRight="16dp"
     android:layout_height="48dp"
     android:gravity="center"
-    android:textColor="@android:color/white"
+    android:textColor="@color/tab_text_color"
     android:textSize="@dimen/text_size_small"
     android:fontFamily="@string/font_fontFamily_medium"
     android:textAllCaps="true" />
