--- a/app/src/main/res/layout/fragment_tab_header.xml
+++ b/app/src/main/res/layout/fragment_tab_header.xml
@@ -21,11 +21,25 @@
 
     </LinearLayout>
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/view_pager"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_weight="1">
+
+
+        <!-- The main content view -->
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/view_pager"
+            android:layout_gravity="center"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent" />
+
+
+        <include android:id="@+id/shadow_main_activity"  layout="@layout/toolbar_shadow" />
+
+    </FrameLayout>
+
 
 
 </LinearLayout>
