--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,9 @@
     <color name="colorPrimaryLight">#BBDEFB</color>
     <color name="colorAccent">#FF4081</color>
 
+    <color name="colorPrimary_FAB">#FFFFFFFF</color>
+    <color name="colorPrimaryDark_FAB">#FFFFFFFF</color>
+    <color name="colorAccent_FAB">#FFFFFFFF</color>
 
     <!-- default theme colors -->
     <!-- Material DEFAULT colors -->
@@ -13,10 +16,6 @@
     <color name="material_drawer_primary_light">@color/colorPrimaryLight</color>
     <color name="material_drawer_accent">@color/colorAccent</color>
 
-
-    <color name="colorPrimary_FAB">#FFFFFFFF</color>
-    <color name="colorPrimaryDark_FAB">#FFFFFFFF</color>
-    <color name="colorAccent_FAB">#FFFFFFFF</color>
 
     <color name="textColorPrimary">#FFFFFFFF</color>
     <color name="navigationBarColor">#FF000000</color>
@@ -73,7 +72,7 @@
 
     <!-- Material Ibrahim -->
     <color name="color_Ibrahim_500">#a1455d</color>
-    <color name="color_Ibrahim_700">#ff50100e</color>
+    <color name="color_Ibrahim_700">#81374a</color>
     <color name="color_Ibrahim_100">#b9e1f8</color>
 
 </resources>
