--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,7 +2,6 @@
 
     <dimen name="RecyclerView_padding">8dp</dimen>
 
-    <dimen name="text_size_small">16sp</dimen>
     <!-- fab sizes -->
     <dimen name="fab_small">40dp</dimen>
     <dimen name="fab_normal">56dp</dimen>
@@ -17,9 +16,11 @@
     <dimen name="fab_progress_margin_top">-36dp</dimen>
 
     <!-- Toolbar Padding -->
-    <dimen name="tool_bar_top_padding">0dp</dimen>
+    <dimen name="tool_bar_top_padding">25dp</dimen>
 
     <dimen name="parallax_image_height">180dp</dimen>
     <dimen name="toolbar_margin_start">72dp</dimen>
-</resources>
 
+    <!-- Tab -->
+    <dimen name="text_size_small">13sp</dimen>
+</resources>
