--- a/app/src/main/res/layout/row_cardview_course.xml
+++ b/app/src/main/res/layout/row_cardview_course.xml
@@ -13,9 +13,18 @@
     card_view:cardCornerRadius="4dp"
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground">
+<LinearLayout
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content">
 
+    <ImageView
+        android:layout_width="0dp"
+        android:layout_weight="0.05"
+        android:background="@color/colorAccent"
+        android:layout_height="fill_parent" />
     <RelativeLayout
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
+        android:layout_weight="0.95"
         android:layout_height="wrap_content">
 
         <LinearLayout
@@ -55,22 +64,27 @@
                 android:layout_width="0dp"
                 android:layout_weight="0.5"
                 android:layout_height="wrap_content"
-                android:id="@+id/tv_course_card_room"
+                android:id="@+id/tv_course_card_building"
+                android:drawableLeft="@drawable/buil"
+                android:drawablePadding="4dp"
                 android:textColor="#878787"
                 android:padding="16dp"
                 android:textSize="16sp"
                 tools:text="AA" />
-
             <TextView
                 android:layout_width="0dp"
                 android:layout_weight="0.5"
                 android:layout_height="wrap_content"
-                android:id="@+id/tv_course_card_building"
+                android:id="@+id/tv_course_card_room"
                 android:textColor="#878787"
+                android:drawableLeft="@drawable/room"
+                android:drawablePadding="4dp"
                 android:padding="16dp"
                 android:textSize="16sp"
                 tools:text="AA" />
+
         </LinearLayout>
     </RelativeLayout>
 
+    </LinearLayout>
 </android.support.v7.widget.CardView>
