--- a/app/src/main/res/layout/row_cardview_holiday.xml
+++ b/app/src/main/res/layout/row_cardview_holiday.xml
@@ -2,69 +2,73 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="25dp"
     android:orientation="horizontal"
     card_view:cardElevation="2sp"
     card_view:cardUseCompatPadding="true"
-
     card_view:cardCornerRadius="4dp"
-    android:clickable="true"
-    >
+    android:clickable="true">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content">
 
-        <TextView
-            android:layout_width="fill_parent"
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="0.05"
+            android:background="@color/colorAccent" />
+
+        <RelativeLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/titleTextView"
-            android:padding="16dp"
-            android:textColor="#3C3C3C"
+            android:layout_weight="0.95">
 
-            android:textSize="28sp"
-            tools:text="This is the title"/>
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/titleTextView"
+                android:padding="16dp"
+                android:textColor="#3C3C3C"
 
-
-        <View
-            android:id="@+id/cardDivider"
-            android:layout_width="fill_parent"
-            android:layout_height="1px"
-            android:background="#D4D4D4"
-            android:layout_below="@+id/titleTextView"
-            android:layout_alignLeft="@+id/titleTextView"
-            android:layout_alignStart="@+id/titleTextView"
-            />
+                android:textSize="28sp"
+                tools:text="This is the title" />
 
 
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/txtFromDate"
-            android:layout_below="@+id/cardDivider"
-            android:textColor="#878787"
-            android:padding="16dp"
-            android:textSize="16sp"
-            tools:text="And this is the description"/>
-
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/txtToDate"
-            android:layout_below="@+id/txtFromDate"
-            android:textColor="#878787"
-            android:padding="16dp"
-            android:textSize="16sp"
-            tools:text="And this is the description"/>
+            <View
+                android:id="@+id/cardDivider"
+                android:layout_width="fill_parent"
+                android:layout_height="1px"
+                android:background="#D4D4D4"
+                android:layout_below="@+id/titleTextView"
+                android:layout_alignLeft="@+id/titleTextView"
+                android:layout_alignStart="@+id/titleTextView" />
 
 
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/txtFromDate"
+                android:layout_below="@+id/cardDivider"
+                android:textColor="#878787"
+                android:padding="16dp"
+                android:textSize="16sp"
+                tools:text="And this is the description" />
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/txtToDate"
+                android:layout_below="@+id/txtFromDate"
+                android:textColor="#878787"
+                android:padding="16dp"
+                android:textSize="16sp"
+                tools:text="And this is the description" />
 
 
-
-
-    </RelativeLayout>
-
+        </RelativeLayout>
+    </LinearLayout>
 </android.support.v7.widget.CardView>
