--- a/app/src/main/res/layout/fragment_coursetime_view.xml
+++ b/app/src/main/res/layout/fragment_coursetime_view.xml
@@ -83,7 +83,14 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/cb_dt_view_isRepeat"
                     android:text="@string/dt_isRepeat"/>
-
+                <com.rengwuxian.materialedittext.MaterialEditText
+                    android:id="@+id/tv_dt_onceDate"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/dt_oneDate_hint"
+                    app:iconLeft="@drawable/ic_today_white"
+                    app:floatingLabel="highlight"
+                    app:iconPadding="10dp" />
 
             </LinearLayout>
         </ScrollView>
