--- a/app/src/main/res/layout/fragment_coursetime_add_edit.xml
+++ b/app/src/main/res/layout/fragment_coursetime_add_edit.xml
@@ -77,6 +77,14 @@
                         android:text="@string/dt_isRepeat"
                         android:focusable="true"
                         />
+                    <com.rengwuxian.materialedittext.MaterialEditText
+                        android:id="@+id/tv_dt_onceDate"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/dt_oneDate_hint"
+                        app:iconLeft="@drawable/ic_today_white"
+                        app:floatingLabel="highlight"
+                        app:iconPadding="10dp" />
 
                 </LinearLayout>
              </ScrollView>
