--- a/app/src/main/res/layout/row_cardview_course.xml
+++ b/app/src/main/res/layout/row_cardview_course.xml
@@ -10,23 +10,31 @@
     card_view:cardElevation="2sp"
     card_view:cardUseCompatPadding="true"
 
-    card_view:cardCornerRadius="4dp"
+    card_view:cardCornerRadius="0dp"
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground">
 <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content">
-
-    <ImageView
-        android:layout_width="0dp"
-        android:layout_weight="0.05"
-        android:background="@color/colorAccent"
-        android:layout_height="fill_parent" />
     <RelativeLayout
-        android:layout_width="0dp"
-        android:layout_weight="0.95"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content">
 
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="0.05"
+            android:id="@+id/img_course_color"
+            android:background="@color/colorAccent"/>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_weight="0.95"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -40,11 +48,10 @@
                 android:id="@+id/tv_course_card_courseNameCode"
                 android:padding="16dp"
                 android:textColor="#3C3C3C"
-                android:textSize="28sp"
+                android:textSize="22sp"
                 tools:text="This is the title" />
 
         </LinearLayout>
-
         <View
             android:id="@+id/cardDivider"
             android:layout_width="fill_parent"
@@ -53,7 +60,6 @@
             android:layout_below="@+id/ll_tv"
             android:layout_alignLeft="@+id/ll_tv"
             android:layout_alignStart="@+id/ll_tv" />
-
         <LinearLayout
             android:layout_width="fill_parent"
             android:orientation="horizontal"
@@ -83,6 +89,8 @@
                 android:textSize="16sp"
                 tools:text="AA" />
 
+        </LinearLayout>
+        </LinearLayout>
         </LinearLayout>
     </RelativeLayout>
 
