--- a/app/src/main/res/layout/row_cardview_task.xml
+++ b/app/src/main/res/layout/row_cardview_task.xml
@@ -2,60 +2,64 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="25dp"
     android:orientation="horizontal"
     card_view:cardElevation="2sp"
     card_view:cardUseCompatPadding="true"
-    card_view:cardCornerRadius="4dp"
+    card_view:cardCornerRadius="0dp"
     android:clickable="true">
 
     <RelativeLayout
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content">
+       <LinearLayout
+           android:layout_width="fill_parent"
+           android:layout_height="wrap_content"
+           android:orientation="horizontal">
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="0.05"
+            android:id="@+id/img_task_color"
+            android:background="@color/colorAccent"/>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_weight="0.95"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:id="@+id/linerHorzTitle"
             android:orientation="horizontal">
 
-            <View
-                android:id="@+id/colorTaskrow1"
-            android:layout_width="3dp"
-            android:layout_height="fill_parent"
-            android:background="#FF1F870F"
-            android:layout_alignLeft="@+id/titleTextView"
-            android:layout_alignStart="@+id/titleTextView"/>
-
             <TextView
-                android:layout_width="fill_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/txtTaskTitle"
-                android:layout_weight="0.3"
+                android:layout_weight="0.6"
                 android:padding="10dp"
                 android:textColor="#3C3C3C"
                 android:textSize="20sp"
-                tools:text="الحق"
-                android:layout_gravity="left"
+                tools:text="Task"
+                android:layout_gravity="center_vertical"
                 android:gravity="left" />
 
             <TextView
-                android:layout_width="fill_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/txtTaskDueDate"
-                android:layout_weight="0.7"
+                android:layout_weight="0.4"
                 android:textColor="#3C3C3C"
                 android:padding="10dp"
                 android:textSize="12sp"
                 tools:text="Mar 23 15"
                 android:gravity="right"
-                android:layout_gravity="right" />
+                android:layout_gravity="center_vertical" />
 
         </LinearLayout>
-
-
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -63,18 +67,7 @@
             android:orientation="horizontal"
             android:layout_below="@+id/linerHorzTitle">
 
-            <View
-                android:id="@+id/colorTaskrow2"
-                android:layout_width="3dp"
-                android:layout_height="fill_parent"
-                android:background="#ff1f870f"
-                android:layout_below="@+id/linerHorz"
-                android:layout_alignLeft="@+id/titleTextView"
-                android:layout_alignStart="@+id/titleTextView"
-                />
-
-
-           <TextView
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/txtTaskSubject"
@@ -82,7 +75,7 @@
                 android:padding="10dp"
                 android:textSize="18sp"
                 tools:text="Subject"
-               android:paddingRight="2dp" />
+                android:paddingRight="2dp" />
 
             <TextView
                 android:layout_width="fill_parent"
@@ -91,18 +84,12 @@
                 android:textColor="#3C3C3C"
                 android:padding="5dp"
                 android:textSize="14sp"
+                android:layout_gravity="center_vertical"
                 tools:text="Type"
                 android:paddingLeft="1dp" />
-           </LinearLayout>
-        <View
-            android:id="@+id/cardDivider"
-            android:layout_width="fill_parent"
-            android:layout_height="1px"
-            android:background="#878787"
-            android:layout_below="@+id/linerHorz"
-            android:layout_alignLeft="@+id/titleTextView"
-            android:layout_alignStart="@+id/titleTextView"
-            />
+        </LinearLayout>
+        </LinearLayout>
+       </LinearLayout>
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
